[package]
name = "ellipticoin_types"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
base64 = "*"
hex = "*"
num-bigint = { version = "0.4.2", features = ["serde"] }
serde = { version = "1.0.120", features = ["derive"] }
serde_cbor = "0.11.1"
